--- a/latest/_modules/traitlets/traitlets.html
+++ b/latest/_modules/traitlets/traitlets.html
@@ -8,7 +8,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>traitlets.traitlets &mdash; NGLView 0.5+8.gf7d1339.dirty documentation</title>
+  <title>traitlets.traitlets &mdash; NGLView 0.5.1 documentation</title>
   
 
   
@@ -30,7 +30,7 @@
   
 
   
-    <link rel="top" title="NGLView 0.5+8.gf7d1339.dirty documentation" href="../../index.html"/>
+    <link rel="top" title="NGLView 0.5.1 documentation" href="../../index.html"/>
         <link rel="up" title="Module code" href="../index.html"/> 
 
   
@@ -2631,7 +2631,7 @@
     <script type="text/javascript">
         var DOCUMENTATION_OPTIONS = {
             URL_ROOT:'../../',
-            VERSION:'0.5+8.gf7d1339.dirty',
+            VERSION:'0.5.1',
             COLLAPSE_INDEX:false,
             FILE_SUFFIX:'.html',
             HAS_SOURCE:  true
