--- a/latest/two_windows.html
+++ b/latest/two_windows.html
@@ -8,7 +8,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>&lt;no title&gt; &mdash; NGLView 0.5+8.gf7d1339.dirty documentation</title>
+  <title>&lt;no title&gt; &mdash; NGLView 0.5.1 documentation</title>
   
 
   
@@ -30,7 +30,7 @@
   
 
   
-    <link rel="top" title="NGLView 0.5+8.gf7d1339.dirty documentation" href="index.html"/> 
+    <link rel="top" title="NGLView 0.5.1 documentation" href="index.html"/> 
 
   
   <script src="_static/js/modernizr.min.js"></script>
@@ -160,7 +160,7 @@
     <script type="text/javascript">
         var DOCUMENTATION_OPTIONS = {
             URL_ROOT:'./',
-            VERSION:'0.5+8.gf7d1339.dirty',
+            VERSION:'0.5.1',
             COLLAPSE_INDEX:false,
             FILE_SUFFIX:'.html',
             HAS_SOURCE:  true
