--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0;url=http://arose.github.io/nglview/latest/index.html">
+        <meta http-equiv="refresh" content="0;url=http://arose.github.io/nglview/dev/index.html">
         <title>Page Redirection</title>
     </head>
     <body>
-        If you are not redirected automatically, <a href="latest/index.html">click here</a>
+        If you are not redirected automatically, <a href="dev/index.html">click here</a>
     </body>
 </html>
 
