--- a/dev/_modules/nglview/player.html
+++ b/dev/_modules/nglview/player.html
@@ -75,7 +75,7 @@
         <span class="n">_make_box_layout</span><span class="p">)</span>
 
 
-<div class="viewcode-block" id="TrajectoryPlayer"><a class="viewcode-back" href="../../_api/nglview.player.html#nglview.player.TrajectoryPlayer">[docs]</a><span class="k">class</span> <span class="nc">TrajectoryPlayer</span><span class="p">(</span><span class="n">DOMWidget</span><span class="p">):</span>
+<div class="viewcode-block" id="TrajectoryPlayer"><a class="viewcode-back" href="../../_api/nglview.html#nglview.player.TrajectoryPlayer">[docs]</a><span class="k">class</span> <span class="nc">TrajectoryPlayer</span><span class="p">(</span><span class="n">DOMWidget</span><span class="p">):</span>
     <span class="c1"># should set default values here different from desired defaults</span>
     <span class="c1"># so `observe` can be triggered</span>
     <span class="n">step</span> <span class="o">=</span> <span class="n">Int</span><span class="p">(</span><span class="mi">0</span><span class="p">)</span><span class="o">.</span><span class="n">tag</span><span class="p">(</span><span class="n">sync</span><span class="o">=</span><span class="bp">True</span><span class="p">)</span>
@@ -118,7 +118,7 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">_preference_widget</span> <span class="o">=</span> <span class="bp">None</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_repr_parameter_widget</span> <span class="o">=</span> <span class="bp">None</span>
 
-<div class="viewcode-block" id="TrajectoryPlayer.smooth"><a class="viewcode-back" href="../../_api/nglview.player.html#nglview.player.TrajectoryPlayer.smooth">[docs]</a>    <span class="k">def</span> <span class="nf">smooth</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+<div class="viewcode-block" id="TrajectoryPlayer.smooth"><a class="viewcode-back" href="../../_api/nglview.html#nglview.player.TrajectoryPlayer.smooth">[docs]</a>    <span class="k">def</span> <span class="nf">smooth</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">interpolate</span> <span class="o">=</span> <span class="bp">True</span></div>
 
     <span class="nd">@observe</span><span class="p">(</span><span class="s1">&#39;camera&#39;</span><span class="p">)</span>
