--- a/dev/_modules/index.html
+++ b/dev/_modules/index.html
@@ -48,6 +48,7 @@
   <h1>All modules for which code is available</h1>
 <ul><li><a href="nglview.html">nglview</a></li>
 <ul><li><a href="nglview/interpolate.html">nglview.interpolate</a></li>
+<li><a href="nglview/jsutils.html">nglview.jsutils</a></li>
 <li><a href="nglview/player.html">nglview.player</a></li>
 <li><a href="nglview/scripts/app.html">nglview.scripts.app</a></li>
 <li><a href="nglview/scripts/nglview.html">nglview.scripts.nglview</a></li>
