--- a/dev/_api/nglview.jsutils.html
+++ b/dev/_api/nglview.jsutils.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>nglview.jsutils &mdash; NGLView 0.5.2a+281.gb99bf65 documentation</title>
+    <title>nglview.jsutils &mdash; NGLView 0.5.2a+284.gd966a0b documentation</title>
     
     <link rel="stylesheet" href="../_static/nature.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.5.2a+281.gb99bf65',
+        VERSION:     '0.5.2a+284.gd966a0b',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="../_static/underscore.js"></script>
     <script type="text/javascript" src="../_static/doctools.js"></script>
     <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <link rel="top" title="NGLView 0.5.2a+281.gb99bf65 documentation" href="../index.html" /> 
+    <link rel="top" title="NGLView 0.5.2a+284.gd966a0b documentation" href="../index.html" /> 
   </head>
   <body role="document">
     <div class="related" role="navigation" aria-label="related navigation">
@@ -36,7 +36,7 @@
         <li class="right" >
           <a href="../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../index.html">NGLView 0.5.2a+281.gb99bf65 documentation</a> &raquo;</li> 
+        <li class="nav-item nav-item-0"><a href="../index.html">NGLView 0.5.2a+284.gd966a0b documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -113,7 +113,7 @@
         <li class="right" >
           <a href="../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../index.html">NGLView 0.5.2a+281.gb99bf65 documentation</a> &raquo;</li> 
+        <li class="nav-item nav-item-0"><a href="../index.html">NGLView 0.5.2a+284.gd966a0b documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
