--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Index &mdash; NGLView 0.5.2a+180.ga23a187.dirty documentation</title>
+    <title>Index &mdash; NGLView 0.5.2a+181.g2ed88da documentation</title>
     
     <link rel="stylesheet" href="_static/nature.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -15,7 +15,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '0.5.2a+180.ga23a187.dirty',
+        VERSION:     '0.5.2a+181.g2ed88da',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -25,7 +25,7 @@
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
     <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <link rel="top" title="NGLView 0.5.2a+180.ga23a187.dirty documentation" href="index.html" /> 
+    <link rel="top" title="NGLView 0.5.2a+181.g2ed88da documentation" href="index.html" /> 
   </head>
   <body role="document">
     <div class="related" role="navigation" aria-label="related navigation">
@@ -37,7 +37,7 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">NGLView 0.5.2a+180.ga23a187.dirty documentation</a> &raquo;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">NGLView 0.5.2a+181.g2ed88da documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -375,7 +375,7 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">NGLView 0.5.2a+180.ga23a187.dirty documentation</a> &raquo;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">NGLView 0.5.2a+181.g2ed88da documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
