--- a/dev/_modules/index.html
+++ b/dev/_modules/index.html
@@ -46,11 +46,13 @@
           <div class="body" role="main">
             
   <h1>All modules for which code is available</h1>
-<ul><li><a href="nglview/player.html">nglview.player</a></li>
+<ul><li><a href="nglview/adaptor.html">nglview.adaptor</a></li>
+<li><a href="nglview/player.html">nglview.player</a></li>
 <li><a href="nglview/scripts/app.html">nglview.scripts.app</a></li>
 <li><a href="nglview/scripts/nglview.html">nglview.scripts.nglview</a></li>
 <li><a href="nglview/shape.html">nglview.shape</a></li>
 <li><a href="nglview/theme/theme.html">nglview.theme.theme</a></li>
+<li><a href="nglview/widget.html">nglview.widget</a></li>
 <li><a href="traitlets/traitlets.html">traitlets.traitlets</a></li>
 </ul>
 
