--- a/dev/_modules/index.html
+++ b/dev/_modules/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Overview: module code &mdash; NGLView 0.5.2a+181.g2ed88da documentation</title>
+    <title>Overview: module code &mdash; NGLView 0.5.2a+181.g2ed88da.dirty documentation</title>
     
     <link rel="stylesheet" href="../_static/nature.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.5.2a+181.g2ed88da',
+        VERSION:     '0.5.2a+181.g2ed88da.dirty',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="../_static/underscore.js"></script>
     <script type="text/javascript" src="../_static/doctools.js"></script>
     <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <link rel="top" title="NGLView 0.5.2a+181.g2ed88da documentation" href="../index.html" /> 
+    <link rel="top" title="NGLView 0.5.2a+181.g2ed88da.dirty documentation" href="../index.html" /> 
   </head>
   <body role="document">
     <div class="related" role="navigation" aria-label="related navigation">
@@ -36,7 +36,7 @@
         <li class="right" >
           <a href="../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../index.html">NGLView 0.5.2a+181.g2ed88da documentation</a> &raquo;</li> 
+        <li class="nav-item nav-item-0"><a href="../index.html">NGLView 0.5.2a+181.g2ed88da.dirty documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -51,6 +51,7 @@
 <li><a href="nglview/scripts/app.html">nglview.scripts.app</a></li>
 <li><a href="nglview/scripts/nglview.html">nglview.scripts.nglview</a></li>
 <li><a href="nglview/shape.html">nglview.shape</a></li>
+<li><a href="nglview/show.html">nglview.show</a></li>
 <li><a href="nglview/theme/theme.html">nglview.theme.theme</a></li>
 <li><a href="nglview/widget.html">nglview.widget</a></li>
 <li><a href="traitlets/traitlets.html">traitlets.traitlets</a></li>
@@ -84,7 +85,7 @@
         <li class="right" >
           <a href="../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../index.html">NGLView 0.5.2a+181.g2ed88da documentation</a> &raquo;</li> 
+        <li class="nav-item nav-item-0"><a href="../index.html">NGLView 0.5.2a+181.g2ed88da.dirty documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
